force-app/main/default/objects/Contact_Visit__c/Contact_Visit__c.object-meta.xml
<CustomObject>
    <label>Contact Visit</label>
    <nameField>
        <displayFormat>CONT-{0000}</displayFormat>
        <label>Contact Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>