force-app/main/default/objects/Contact_Visit__c/fields/Attitude_Towards_Weir__c.field-meta.xml
<CustomField>
    <fullName>Attitude_Towards_Weir__c</fullName>
    <formula>TEXT( Contact__r.Attitude_Towards_Weir__c )</formula>
    <label>Attitude Towards Weir</label>
    <type>Text</type>
</CustomField>