force-app/main/default/objects/Contact_Visit__c/fields/Direct_Account__c.field-meta.xml
<CustomField>
    <fullName>Direct_Account__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <label>Direct Account</label>
    <type>Text</type>
</CustomField>