force-app/main/default/objects/Contact_Visit__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <formula>Contact__r.Title</formula>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>